fix text not centered for link button

--- a/synapse/res/templates/sso.css
+++ b/synapse/res/templates/sso.css
@@ -53,6 +53,7 @@ main {
   width: 100%;
   margin: 16px 0;
   cursor: pointer;
+  text-align: center;
 }
 
 .profile {
